--- a/spec.html
+++ b/spec.html
@@ -98,7 +98,7 @@ Purpose
 <ins>HasTopicBinding()</ins>
 </td>
 <td>
-<ins>Determine the status of an Environment Record's topic binding (`#` binding). Return *true* if it establishes a topic binding and *false* if it does not.</ins>
+<ins>Determine the status of an Environment Record's topic binding. Return *true* if it establishes a topic binding and *false* if it does not.</ins>
 </td>
 </tr>
 </tbody>
@@ -183,7 +183,7 @@ Purpose
 BindTopicValues(V)
 </td>
 <td>
-Establish the immutable topic binding (that is, the `#` binding) of this Environment Record and set the topic binding's value. _V_ is a list containing the one element which is the topic value and is a value of any ECMAScript language type. Afterward, the value returned by the Environment Record's HasTopicBinding method is *true*. This method cannot be called more than once on any single Environment Record.
+Establish the immutable topic binding of this Environment Record and set the topic binding's value. _V_ is a list containing the one element which is the topic value and is a value of any ECMAScript language type. Afterward, the value returned by the Environment Record's HasTopicBinding method is *true*. This method cannot be called more than once on any single Environment Record.
 </td>
 </tr>
 <tr>
@@ -191,7 +191,7 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 GetTopicBinding()
 </td>
 <td>
-Return the values of the topic binding (`#` binding) of this Environment Record. This method is never called when the HasTopicBinding method would return *false*.
+Return the values of the topic binding of this Environment Record. This method is never called when the HasTopicBinding method would return *false*.
 </td>
 </tr>
 </tbody>
@@ -240,7 +240,7 @@ Return the values of the topic binding (`#` binding) of this Environment Record.
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause of the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-declarative-environment-records-gettopicbinding>further modifications by Additional Feature NP</emu-xref>.</p>
 </emu-note>
-<p>The method GetTopicBinding for declarative Environment Records returns the values of the record's topic binding (`#` binding). It must not be called when the record's topic binding has not already been established.</p>
+<p>The method GetTopicBinding for declarative Environment Records returns the values of the record's topic binding. It must not be called when the record's topic binding has not already been established.</p>
 <emu-note>
 <p>That is, Environment Records will never be called on an Environment Record before the BindTopicValues method has been called.</p>
 </emu-note>
@@ -1487,13 +1487,13 @@ If the value of [[TopicBindingStatus]] is *true*, [[TopicValues]] is a list cont
 </tr>
 <tr>
 <td>
-<ins>[[RestTopicValues]]</ins>
+<ins>[[RestTopicStartIndex]]</ins>
 </td>
 <td>
-<ins>Array of any | ~empty~</ins>
+<ins>Integer index | ~empty~</ins>
 </td>
 <td>
-<ins>If the value of [[TopicBindingStatus]] is *true*, [[RestTopicValues]] is the value of the Environment Record's secondary topic binding (that is, the values of `...` within its program scope). Otherwise, the value of [[RestTopicValues]] is ~empty~.</ins>
+<ins>If the value of [[TopicBindingStatus]] is *true*, [[RestTopicStartIndex]] is the first index of the Environment Record's rest topic binding (that is, the values of `...` within its program scope) in [[TopicValues]]; if so, this index must be an integer inclusively between 0 and the length of [[TopicValues]]. If the value of [[TopicBindingStatus]] is *false*, the value of [[RestTopicStartIndex]] is ~empty~.</ins>
 </td>
 </tr>
 </tbody>
@@ -1517,42 +1517,26 @@ Purpose
 <tbody>
 <tr>
 <td>
-BindTopicValues(V<ins>, VRest</ins>)
+BindTopicValues(V<ins>, VRestStartIndex</ins>)
 </td>
 <td>
-Establish the immutable topic binding<ins>s</ins> <del>(that is, the `#` binding) </del>of this Environment Record and set the topic binding<del>s'</del><ins>'s</ins> value<ins>s</ins>. <del>_V_ is the value for the binding and is a value of any ECMAScript language type.</del><ins>_V_ is a list with elements of any ECMAScript language type. _VRest_ is either ~empty~ or an Array whose elements are of any ECMAScript language type.</ins> Afterward, the value returned by the Environment Record's HasTopicBinding method is *true*. This method cannot be called more than once on any single Environment Record.
-</td>
-</tr>
-<tr>
-<td>
-GetPrimaryTopicBinding()
-</td>
-<td>
-Return the value of the <ins>primary </ins>topic binding (`#` binding) of this Environment Record. This method is never called when the HasTopicBinding method would return *false*.
+Establish the immutable topic binding of this Environment Record and set the topic binding<del>s'</del><ins>'s</ins> value<ins>s</ins>. <del>_V_ is the value for the binding and is a value of any ECMAScript language type.</del><ins>_V_ is a list with elements of any ECMAScript language type. _VRestStartIndex_ is either ~empty~ or an Array whose elements are of any ECMAScript language type.</ins> Afterward, the value returned by the Environment Record's HasTopicBinding method is *true*. This method cannot be called more than once on any single Environment Record.
 </td>
 </tr>
 <tr>
 <td>
-<ins>GetSecondaryTopicBinding()</ins>
+GetTopicBinding()
 </td>
 <td>
-<ins>Return the value of the secondary topic binding (`##` binding) of this Environment Record. This method is never called when the HasTopicBinding method would return *false*.</ins>
-</td>
-</tr>
-<tr>
-<td>
-<ins>GetTertiaryTopicBinding()</ins>
-</td>
-<td>
-<ins>Return the value of the tertiary topic binding (`###` binding) of this Environment Record. This method is never called when the HasTopicBinding method would return *false*.</ins>
+Return the value of the <ins>primary </ins>topic binding of this Environment Record. This method is never called when the HasTopicBinding method would return *false*.
 </td>
 </tr>
 <tr>
 <td>
-<ins>GetRestTopicBinding()</ins>
+<ins>GetRestTopicStartIndex()</ins>
 </td>
 <td>
-<ins>Return the value of the rest topic binding (`...` binding) of this Environment Record. This method is never called when the HasTopicBinding method would return *false*.</ins>
+<ins>Return the value of the index, within its topic binding of this Environment Record, at which its rest topic reference `...` begins. The index may be equal to the length of the topic binding, in which case the rest topic reference `...` is empty. This method is never called when the HasTopicBinding method would return *false*.</ins>
 </td>
 </tr>
 </tbody>
@@ -1562,7 +1546,7 @@ Return the value of the <ins>primary </ins>topic binding (`#` binding) of this E
 <p>The behaviour of the concrete and additional specification methods for declarative Environment Records is defined by the following algorithms.</p>
 
 <emu-annex id=sec-additional-feature-np-declarative-environment-records-bindtopicvalues>
-<h1>BindTopicValues ( _V_<ins>, _VRest_</ins> )</h1>
+<h1>BindTopicValues ( _V_<ins>, _VRestStartIndex_</ins> )</h1>
 <emu-note type=editor>
 <p>This section revises the <emu-xref href=#sec-declarative-environment-records-bindtopicvalues>new clause in the core proposal</emu-xref>.</p>
 </emu-note>
@@ -1573,81 +1557,28 @@ Return the value of the <ins>primary </ins>topic binding (`#` binding) of this E
 3. Let _envRec_ be the declarative Environment Record for which the method was invoked.
 4. Assert: _envRec_.[[TopicBindingStatus]] is *false*.
 5. Set _envRec_.[[TopicValues]] to _V_.
-6. Set _envRec_.[[RestTopicValues]] to _VRest_.
+6. Set _envRec_.[[RestTopicStartIndex]] to _VRestStartIndex_.
 7. Set _envRec_.[[TopicBindingStatus]] to *true*.
 8. Return NormalCompletion(~empty~).
 </emu-alg>
 </emu-annex>
 
-<emu-annex id=sec-additional-feature-np-declarative-environment-records-getprimarytopicbinding>
-<h1>GetPrimaryTopicBinding ( )</h1>
-<emu-note type=editor>
-<p>This section revises the <emu-xref href=#sec-declarative-environment-records-getprimarytopicbinding>new clause in the core proposal</emu-xref>.</p>
-</emu-note>
-<p>The method GetPrimaryTopicBinding for declarative Environment Records returns the value of the record's <ins>primary </ins>topic binding (`#` binding). It must not be called when the record's <ins>primary</ins> topic binding has not already been established.</p>
-<emu-note>
-<p>That is, Environment Records will never be called on an Environment Record before the BindTopicValues method has been called<ins> with a list argument for _topics_ with at least one element</ins>.</p>
-</emu-note>
-<emu-alg>
-1. Let _envRec_ be the declarative Environment Record for which the method was invoked.
-2. Assert: _envRec_.[[TopicBindingStatus]] is *true*.
-3. Let _topicValues_ be _envRec_.[[TopicValues]].
-4. Assert: The length of _topicValues_ is at least 1.
-5. Return _topicValues_[0].
-</emu-alg>
-</emu-annex>
-
-<emu-annex id=sec-additional-feature-np-declarative-environment-records-getsecondarytopicbinding>
-<h1><ins>GetSecondaryTopicBinding ( )</ins></h1>
+<emu-annex id=sec-additional-feature-np-declarative-environment-records-getresttopicstartindex>
+<h1><ins>GetRestTopicStartIndex ( )</ins></h1>
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause in addition to the revisions of the core proposal.</p>
 </emu-note>
-<p>The method GetSecondaryTopicBinding for declarative Environment Records returns the value of the record's secondary topic binding (`##` binding). It must not be called when the record's secondary topic binding has not already been established.</p>
+<p>The method GetRestTopicBinding for declarative Environment Records returns the value of the index, within its topic binding of this Environment Record, at which its rest topic reference `...` begins. The method must not be called when the record's topic binding has not already been established.</p>
 <emu-note>
-<p>That is, Environment Records will never be called on an Environment Record before the BindTopicValues method has been called with a list argument for _topics_ with at least two elements.</p>
+<p>That is, Environment Records will never be called on an Environment Record before the BindTopicValues method has been called.</p>
+<p>The index returned may be equal to *0*, in which case the rest topic reference `...` consists of the entire topic binding's values. Or it may be equal to the length of the topic binding, in which case the rest topic reference `...` is empty.</p>
 </emu-note>
 <emu-alg>
 1. Let _envRec_ be the declarative Environment Record for which the method was invoked.
 2. Assert: _envRec_.[[TopicBindingStatus]] is *true*.
-3. Let _topicValues_ be _envRec_.[[TopicValues]].
-4. Assert: The length of _topicValues_ is at least 2.
-5. Return _topicValues_[1].
-</emu-alg>
-</emu-annex>
-
-<emu-annex id=sec-additional-feature-np-declarative-environment-records-gettertiarytopicbinding>
-<h1><ins>GetTertiaryTopicBinding ( )</ins></h1>
-<emu-note type=editor>
-<p>This section is a wholly new sub-clause in addition to the revisions of the core proposal.</p>
-</emu-note>
-<p>The method GetTertiaryTopicBinding for declarative Environment Records returns the value of the record's tertiary topic binding (`###` binding). It must not be called when the record's tertiary topic binding has not already been established.</p>
-<emu-note>
-<p>That is, Environment Records will never be called on an Environment Record before the BindTopicValues method has been called with a list argument for _topics_ with at least three elements.</p>
-</emu-note>
-<emu-alg>
-1. Let _envRec_ be the declarative Environment Record for which the method was invoked.
-2. Assert: _envRec_.[[TopicBindingStatus]] is *true*.
-3. Let _topicValues_ be _envRec_.[[TopicValues]].
-4. Assert: The length of _topicValues_ is at least 3.
-5. Return _topicValues_[2].
-</emu-alg>
-</emu-annex>
-
-<emu-annex id=sec-additional-feature-np-declarative-environment-records-getresttopicbinding>
-<h1><ins>GetRestTopicBinding ( )</ins></h1>
-<emu-note type=editor>
-<p>This section is a wholly new sub-clause in addition to the revisions of the core proposal.</p>
-</emu-note>
-<p>The method GetRestTopicBinding for declarative Environment Records returns the value of the record's |RestTopicReference| binding (`...` binding). It must not be called when the record's rest topic binding has not already been established.</p>
-<emu-note>
-<p>That is, Environment Records will never be called on an Environment Record before the BindTopicValues method has been called with an integer argument for _restStartIndex_.</p>
-</emu-note>
-<emu-alg>
-1. Let _envRec_ be the declarative Environment Record for which the method was invoked.
-2. Assert: _envRec_.[[TopicBindingStatus]] is *true*.
-3. Let _restTopicValues_ be _envRec_.[[RestTopicValues]].
-4. Assert: _restTopicValues_ is an Array.
-5. Return _restTopicValues_.
+3. Let _restTopicStartIndex_ be _envRec_.[[RestTopicStartIndex]].
+4. Assert: _restTopicStartIndex_ is an integer inclusively between 0 and the length of _envRec_.[[TopicValues]].
+5. Return _restTopicStartIndex_.
 </emu-alg>
 </emu-annex>
 </emu-annex>
@@ -2126,8 +2057,8 @@ PipelineTopicExpression[In, Yield, Await] :
 7. <ins>Assert: _envRec_.GetSecondaryTopicBinding() is ~empty~.</ins>
 8. <ins>Assert: _envRec_.GetTertiaryTopicBinding() is ~empty~.</ins>
 9. <ins>Assert: _envRec_.GetRestTopicBinding() is ~empty~.</ins>
-10. <ins>Let _restTopics_ be [TODO]</ins>
-11. Perform ! _envRec_.BindTopicValues(_topics_<ins>, _restTopics_</ins>).
+10. <ins>Let _restTopicStartIndex_ be [TODO]</ins>
+11. Perform ! _envRec_.BindTopicValues(_topics_<ins>, _restTopicStartIndex_</ins>).
 </emu-alg>
 </emu-annex>
 
